# cg-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  scene.xml  vcpkg.json
engine/: CMakeLists.txt
engine/src/: main.cpp  settings.hpp
engine/src/debug/: Logger.cpp  Logger.hpp
engine/src/engine/: Engine.cpp  Engine.hpp  Settings.cpp  Settings.hpp
engine/src/math/: Path.cpp  Path.hpp  Rotate.hpp  Scale.hpp  Transformation.hpp  Translate.hpp
engine/src/scene/: Group.cpp  Group.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp
engine/src/ui/: UI.cpp  UI.hpp
engine/src/window/: Camera.cpp  Camera.hpp  Window.cpp  Window.hpp
generator/: CMakeLists.txt
models/: bezier_10.3d  box.3d  box_2_3.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  cylinder_1_2_10_1.3d  cylinder_1_2_30_10.3d  gumbo.patch  gumbo_15.3d  icosphere.3d  icosphere_1_4.3d  plane.3d  plane_2_3.3d  saturn_ring.3d  sphere.3d  sphere_1_10_10.3d  sphere_1_8_8.3d  sun.3d  torus.3d  torus_2_1_30_15.3d
scenes/: scene_box.xml  scene_car.xml  scene_cone.xml  scene_cylinder.xml  scene_gumbo.xml  scene_icosphere.xml  scene_plane.xml  scene_sphere.xml  scene_sponza.xml  scene_teapot.xml  scene_torus.xml  solar_system.xml  solar_system_phase_2.xml  solar_system_phase_3.xml  solar_system_phase_4.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_1.xml  test_3_2.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml  test_color_lights.xml
scripts/: build.bat  run.bat  (+1 more)
(+4 files in other folders)
